--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@ body{
     background-color: #f9f9f9;
     font-family: 'Courier New', Courier, monospace;
 }
+headbar{
+    h1{
+        font-family: 'Courier New', Courier, monospace;
+        color: blue;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+    .button-container{
+        text-align: right;
+        margin-bottom: 10px;
+    }
+}    
 button{
     background-color: rgb(148, 248, 255);
     color: blue;
@@ -16,6 +28,7 @@ button{
   position: relative;
   display: inline-block;
   font-size: 15px;
+  text-align: left;
 }
 
 .dropdown-trigger {
