--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@ body{
     padding: 0 15vh 0 15vh;
     background-color: #f9f9f9;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 2vh;
+    font-size: 2.2vh;
     p{
       margin:0px;
     }
 }
 headbar{
-    font-size: 2vh;
+    font-size: 2.2vh;
     h1{
         font-family: 'Courier New', Courier, monospace;
         color: blue;
@@ -19,8 +19,17 @@ headbar{
         text-align: right;
         margin-bottom: 10px;
         margin-bottom: 40px;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #f9f9f9;
+                padding-top: 10px;
+        button{
+          font-size: 2.2vh;
+        }
     }
 }
+
 .container{
   justify-content: center;
   align-items: flex-start;
@@ -37,6 +46,31 @@ headbar{
     }
     p{
       line-height:1.2;
+    }
+}
+
+/* Responsive design for mobile */
+@media (max-width: 700px) {
+    body {
+        padding: 0 2vw;
+        font-size: 2.5vw;
+    }
+    .container {
+        flex-direction: column;
+        gap: 16px;
+        align-items: stretch;
+    }
+    #left, #right {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
+    headbar h1 {
+        font-size: 5vw;
+        margin-top: 3vw;
+    }
+    .button-container {
+        text-align: left;
+        margin-bottom: 16px;
     }
 }
 
@@ -75,14 +109,16 @@ headbar{
 }
 
 #contact-info{
-  justify-content: center;
-  align-items: center;
-  margin:0px;
-  gap:4vh;
-  #icon{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    gap: 2vh;
+}
+#contact-info #icon {
     width: 4vh;
     margin-right: 10px;
-  }
 }
 #right{
     margin-left: 20px;
