--- a/css/style.css
+++ b/css/style.css
@@ -325,3 +325,32 @@ nav a:hover {
     color: #666;
     padding: 40px;
 }
+
+.scroll-container {
+width: 100%;
+overflow-x: auto;
+white-space: nowrap;
+border: 1px solid #000;
+flex-direction:row;
+display: flex;
+gap: 20px;
+padding: 20px;
+  h3{
+    margin-top: 0px;
+    margin-bottom:0px;
+  }
+}
+.video-container {
+  background-color:rgb(148, 248, 255);
+  border-radius: 8px;
+  padding: 10px 20px 10px 20px;
+}
+
+/* Mapbox map container styling */
+#map {
+    width: 100%;
+    height: 400px;
+    margin: 30px 0;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
