--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,50 @@
 body{
     padding: 0 15vh 0 15vh;
-    background-color: #f9f9f9;
+    background-color: #f0f4f1;
     font-family: 'Courier New', Courier, monospace;
     font-size: 2.2vh;
     p{
       margin:0px;
     }
+    h2{
+        color: #02263D;
+    }
+    margin-top:40px;
+    a{
+        color: #054A75;
+    }
 }
-headbar{
+
+header{
     font-size: 2.2vh;
     h1{
         font-family: 'Courier New', Courier, monospace;
-        color: blue;
+        color: #02263D;
         text-align: center;
         margin-top: 5vh;
     }
     .button-container{
         text-align: right;
-        margin-bottom: 10px;
-        margin-bottom: 40px;
-                position: sticky;
-                top: 0;
-                z-index: 100;
-                background: #f9f9f9;
-                padding-top: 10px;
+        margin-bottom: 20px;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        background: #f0f4f1;
         button{
           font-size: 2.2vh;
         }
+    }
+    #bottom-p{
+      margin-bottom:10px;
     }
 }
 
 .container{
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   display:flex;
   gap:30px;
+  width: 100%;
 }
 .column{
     display: flex;
@@ -56,15 +66,19 @@ headbar{
         font-size: 2.5vw;
     }
     .container {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 16px;
         align-items: stretch;
     }
     #left, #right {
+      margin-top:0px;
         flex: 1 1 100%;
         max-width: 100%;
     }
-    headbar h1 {
+    #right{
+      order:-1;
+    }
+    header h1 {
         font-size: 5vw;
         margin-top: 3vw;
     }
@@ -93,7 +107,7 @@ headbar{
     opacity: 0; 
     transition: opacity 0.5s ease; 
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
 }
 #overlay-text {
     color: white;
@@ -128,8 +142,8 @@ headbar{
 
 button{
     size-adjust:initial;
-    background-color: rgb(148, 248, 255);
-    color: blue;
+    background-color: #fedc97;
+    color: #02263D;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -143,8 +157,8 @@ button{
 }
 
 .dropdown-trigger {
-  background-color: rgb(148, 248, 255);
-    color: blue;
+    background-color: #fedc97;
+    color: #02263D;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -160,11 +174,15 @@ button{
   padding: 12px;
   z-index: 1;
   border-radius: 4px;
-  a{
-    text-decoration: none;
-    display: block;
-    padding: 8px 0;
-  }
+    a{
+        text-decoration: none;
+        display: block;
+        padding: 8px 0;
+        transition: text-decoration 0.2s;
+    }
+    l:hover a {
+        text-decoration: underline;
+    }
 }
 
 .dropdown:hover .dropdown-content {
@@ -204,15 +222,16 @@ button{
 }
 
 #tag-filter {
-    margin: 20px 0;
+    margin-bottom: 20px;
+    margin-top:0px;
 }
 
 .tag-button {
     margin: 5px;
     padding: 8px 16px;
-    border: 2px solid #007bff;
+    border: 2px solid #02263D;
     background-color: white;
-    color: #007bff;
+    color: #02263D;
     border-radius: 20px;
     cursor: pointer;
     transition: all 0.3s;
@@ -223,7 +242,7 @@ button{
 }
 
 .tag-button.active {
-    background-color: #007bff;
+    background-color: #02263D;
     color: white;
 }
 
@@ -250,17 +269,17 @@ button{
 .card h2 {
     font-size: 1.5rem;
     margin-bottom: 10px;
-    color: #222;
+    color: #02263D;
 }
 
 .date {
-    color: #666;
+    color: rgb(63, 62, 62) ;
     font-size: 0.9rem;
     margin-bottom: 10px;
 }
 
 .excerpt {
-    color: #555;
+    color: rgb(63, 62, 62) ;
     margin-bottom: 15px;
 }
 
@@ -271,8 +290,8 @@ button{
 }
 
 .tag {
-    background-color: #e7f3ff;
-    color: #007bff;
+    background-color: #FEDC97;
+    color: #02263D;
     padding: 4px 12px;
     border-radius: 12px;
     font-size: 0.85rem;
@@ -341,7 +360,7 @@ padding: 20px;
   }
 }
 .video-container {
-  background-color:rgb(148, 248, 255);
+  background-color:#fedc97;
   border-radius: 8px;
   padding: 10px 20px 10px 20px;
 }
