--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     padding: 0 15vh 0 15vh;
     background-color: #f0f4f1;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Figtree", sans-serif;
     font-size: 2.2vh;
     p{
       margin:0px;
@@ -18,10 +18,11 @@ body{
 header{
     font-size: 2.2vh;
     h1{
-        font-family: 'Courier New', Courier, monospace;
+        font-family: "Be Vietnam Pro", sans-serif;
+        font-size: 10vh;
         color: #02263D;
         text-align: center;
-        margin-top: 5vh;
+        margin-top: 6vh;
     }
     .button-container{
         text-align: right;
@@ -148,8 +149,7 @@ button{
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family: 'Courier New', Courier, monospace;
-}
+    font-family: "Figtree", sans-serif;}
 .dropdown {
   position: left;
   display: inline-block;
