--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,15 @@ body{
 
 header{
     font-size: 2.2vh;
+    margin-bottom: 3vh;
     h1{
         font-family: "Be Vietnam Pro", sans-serif;
         font-size: 10vh;
         color: #02263D;
         text-align: center;
         margin-top: 6vh;
+        line-height: 0.95;
+        margin-bottom:3vh;
     }
     .button-container{
         text-align: right;
@@ -36,7 +39,7 @@ header{
         }
     }
     #bottom-p{
-      margin-bottom:10px;
+      margin-bottom:2vh;
     }
 }
 
@@ -64,7 +67,7 @@ header{
 @media (max-width: 700px) {
     body {
         padding: 0 2vw;
-        font-size: 2.5vw;
+        font-size: 3vw;
     }
     .container {
         flex-direction: column-reverse;
@@ -72,6 +75,7 @@ header{
         align-items: stretch;
     }
     #left, #right {
+      font-size: 3vw;
       margin-top:0px;
         flex: 1 1 100%;
         max-width: 100%;
@@ -80,12 +84,16 @@ header{
       order:-1;
     }
     header h1 {
-        font-size: 5vw;
+        font-size: 6vw;
         margin-top: 3vw;
     }
     .button-container {
         text-align: left;
         margin-bottom: 16px;
+    }
+    iframe{
+      width: 100%;
+      height: 30vh;
     }
 }
 
@@ -347,9 +355,10 @@ nav a:hover {
 
 .scroll-container {
 width: 100%;
+margin-top:3vh;
 overflow-x: auto;
 white-space: nowrap;
-border: 1px solid #000;
+border: 3px dashed #054A75;
 flex-direction:row;
 display: flex;
 gap: 20px;
